// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox EC default renders correctly 1`] = `
<fieldset
  aria-describedby="checkbox-default-helper"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label"
    id="checkbox-default-label"
  >
    Select your preferred destinations
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="checkbox-default-helper"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Spain
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Belgium
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-checkbox__help ecl-checkbox__help--disabled"
      id="helper-default-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Checkbox EC default renders correctly with extra attributes 1`] = `
<fieldset
  aria-describedby="checkbox-default-helper"
  class="ecl-form-group"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <legend
    class="ecl-form-label"
    id="checkbox-default-label"
  >
    Select your preferred destinations
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="checkbox-default-helper"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Spain
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Belgium
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-checkbox__help ecl-checkbox__help--disabled"
      id="helper-default-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Checkbox EC default renders correctly with extra class names 1`] = `
<fieldset
  aria-describedby="checkbox-default-helper"
  class="ecl-form-group custom-class custom-class--test"
>
  <legend
    class="ecl-form-label"
    id="checkbox-default-label"
  >
    Select your preferred destinations
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="checkbox-default-helper"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Spain
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Belgium
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-checkbox__help ecl-checkbox__help--disabled"
      id="helper-default-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Checkbox EC renders correctly when invalid 1`] = `
<fieldset
  aria-describedby="checkbox-default-helper"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label ecl-form-label--invalid"
    id="checkbox-default-label"
  >
    Select your preferred destinations
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="checkbox-default-helper"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-feedback-message"
  >
    
      Error message for the group
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Spain
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Belgium
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-checkbox__help ecl-checkbox__help--disabled"
      id="helper-default-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Checkbox EC renders correctly when required 1`] = `
<fieldset
  aria-describedby="checkbox-default-helper"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label"
    id="checkbox-default-label"
  >
    Select your preferred destinations
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="checkbox-default-helper"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Spain
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Belgium
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-checkbox__help ecl-checkbox__help--disabled"
      id="helper-default-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Checkbox EC single checkbox renders correctly when invalid 1`] = `
<fieldset
  aria-describedby="checkbox-default-helper"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label ecl-form-label--invalid"
    id="checkbox-default-label"
  >
    Select your preferred destinations
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="checkbox-default-helper"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Spain
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-feedback-message"
  >
    Error message for the group
  </div>
</fieldset>
`;

exports[`Checkbox EU default renders correctly 1`] = `
<fieldset
  aria-describedby="checkbox-default-helper"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label"
    id="checkbox-default-label"
  >
    Select your preferred destinations
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="checkbox-default-helper"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Spain
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Belgium
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-checkbox__help ecl-checkbox__help--disabled"
      id="helper-default-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Checkbox EU invalid renders correctly 1`] = `
<fieldset
  aria-describedby="checkbox-default-helper"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label ecl-form-label--invalid"
    id="checkbox-default-label"
  >
    Select your preferred destinations
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="checkbox-default-helper"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-feedback-message"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--s ecl-feedback-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--warning"
      />
    </svg>
          Error message for the group
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Spain
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Belgium
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid ecl-checkbox__box--disabled"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-checkbox__help ecl-checkbox__help--disabled"
      id="helper-default-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Checkbox EU single checkbox renders correctly when invalid 1`] = `
<fieldset
  aria-describedby="checkbox-default-helper"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label ecl-form-label--invalid"
    id="checkbox-default-label"
  >
    Select your preferred destinations
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="checkbox-default-helper"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-checkbox__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--check"
          />
        </svg>
      </span>
      Spain
    </label>
    <div
      class="ecl-checkbox__help"
      id="helper-default-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-feedback-message"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--s ecl-feedback-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--warning"
      />
    </svg>
          Error message for the group
  </div>
</fieldset>
`;
